# PyRXMesh

./: .gitignore  CMakeLists.txt  CUSTOM_CUDA_PLUGINS.md  DEVELOPING.md  LICENSE  README.md  conftest.py  environment.yml  pyproject.toml
.github/workflows/: wheels.yml
cmake/: build_config.json.in  pyrxmeshConfig.cmake.in
examples/: load_and_show.py
examples/custom_kernel_plugin/: CMakeLists.txt  README.md  pyproject.toml  run_edge_lengths.py
examples/custom_kernel_plugin/rxmesh_edge_lengths/: __init__.py
examples/custom_kernel_plugin/src/: rxmesh_edge_lengths.cu
include/pyrxmesh/: plugin_api.h
pyrxmesh/: __init__.py  cmake_dir.py  diff.py  geometry.py  plugin.py
src/: bindings.cu
src/bindings/: attributes.cu  common.h  core.cu  dense_matrix.cu  dense_matrix_dlpack.h  dlpack_minimal.h  geometry.cu  handles.cu  mesh.cu  py_attribute.h  py_dense_matrix.h  py_hessian_sparse_matrix.h  py_jacobian_sparse_matrix.h  py_solvers.cu  py_solvers.h  py_sparse_matrix.cu  py_sparse_matrix.h  sparse_matrix_csr.h  sparse_matrix_dlpack.h
tests/: test_attributes.py  test_core_mesh_handles.py  test_dense_matrix.py  test_geometry_io.py  test_sparse_matrix.py
