[build-system]
requires = [
    "scikit-build-core>=0.12",
    "pybind11>=2.13",
]
build-backend = "scikit_build_core.build"

[project]
name = "rxmesh-edge-lengths"
version = "0.1.0"
description = "Example PyRXMesh custom CUDA kernel plugin"
requires-python = ">=3.10"
dependencies = [
    "PyRXMesh",
]

[tool.scikit-build]
minimum-version = "0.12"
cmake.version = ">=3.24,<4"
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"
wheel.packages = ["rxmesh_edge_lengths"]
build.targets = ["_rxmesh_edge_lengths"]
install.components = ["python"]
